@@ -56,6 +56,10 @@
 
 // MACROS ------------------------------------------------------------------
 
+#ifdef PLATFORM_WINDOWS
+#define strdup _strdup
+#endif
+
 // TYPES -------------------------------------------------------------------
 
 // EXTERNAL FUNCTION PROTOTYPES --------------------------------------------
